WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134025
[EFL][WK2] Search field is not shown properly on doing ctrl+f on Minibrowser
https://bugs.webkit.org/show_bug.cgi?id=134025
Summary
[EFL][WK2] Search field is not shown properly on doing ctrl+f on Minibrowser
Shivakumar J M
Reported
2014-06-18 04:44:21 PDT
Run Minibrowser to launch any html page, do ctrl+f on webpage, Search field is not shown properly on webpage
Attachments
Patch
(1.43 KB, patch)
2014-06-23 03:32 PDT
,
Shivakumar J M
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shivakumar J M
Comment 1
2014-06-23 03:32:55 PDT
Created
attachment 233595
[details]
Patch Use EVAS_HINT_FILL in evas_object_size_hint_align_set() api
Gyuyoung Kim
Comment 2
2014-06-23 22:55:05 PDT
Comment on
attachment 233595
[details]
Patch LGTM.
Ryuan Choi
Comment 3
2014-06-23 23:03:16 PDT
Comment on
attachment 233595
[details]
Patch thanks
WebKit Commit Bot
Comment 4
2014-06-23 23:34:48 PDT
Comment on
attachment 233595
[details]
Patch Clearing flags on attachment: 233595 Committed
r170349
: <
http://trac.webkit.org/changeset/170349
>
WebKit Commit Bot
Comment 5
2014-06-23 23:34:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug