[EFL][WK2] Search field is not shown properly on doing ctrl+f on Minibrowser. https://bugs.webkit.org/show_bug.cgi?id=134025

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-06-23
Reviewed by Gyuyoung Kim.

Use EVAS_HINT_FILL in evas_object_size_hint_align_set() api.

* MiniBrowser/efl/main.c:
(window_create):

Canonical link: https://commits.webkit.org/152207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170349 268f45cc-cd09-0410-ab3c-d52691b4dbfc